# ab-parser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  rules.ab
include/: ab_parser.h
src/: blocks.cpp  definitions.cpp  definitions.h  helpers.cpp  internal.h  internal_helpers.h  parse_blocks.cpp  parse_blocks.h  parse_commons.cpp  parse_commons.h  parse_spans.cpp  parse_spans.h  parser.cpp  parser.h  profiling.cpp  profiling.h  spans.cpp
tests/: CMakeLists.txt  benchmark.cpp  main.cpp  profiling.cpp  t_helpers.h  t_testcases.cpp  t_testcases.h
tests/files/: _testbench.ab  code.ab  code.ast  code.html  code_higher_delimiters.ab  code_higher_delimiters.ast  code_higher_delimiters.html  definitions.ab  definitions.ast  definitions.html  divs.ab  divs.ast  divs.html  divs2.ab  divs2.ast  divs2.html  headers1.ab  headers1.ast  headers1.html  headers2.ab  headers2.ast  headers2.html  headers3.ab  headers3.ast  headers3.html  lists1.ab  lists1.ast  lists1.html  lists2.ab  lists2.ast  lists2.html  long_doc.ab  math.ab  math.ast  math.html  math_in_quote.ab  math_in_quote.ast  math_in_quote.html  nested_divs.ab  nested_divs.ast  (+34 more)
